docs/Suprema SDK/Include/BS_API.h

//
// Initialize SDK
//
__declspec( dllexport ) BS_RET_CODE __stdcall BS_InitSDK();
//
// Initialize socket
//
__declspec( dllexport ) BS_RET_CODE __stdcall BS_OpenSocket( const char* biostationAddr, int port, int* handle );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_CloseSocket( int handle );
//
// Initialize USB
//
__declspec( dllexport ) BS_RET_CODE __stdcall BS_OpenUSB( int* handle );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_CloseUSB( int handle );
//
// USB Memory stick
//
__declspec( dllexport ) BS_RET_CODE __stdcall BS_OpenUSBMemory( const char* driveLetter, int* handle );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_CloseUSBMemory( int handle );
//
// Terminal information
//
__declspec( dllexport ) BS_RET_CODE __stdcall BS_GetBiostationID( int handle, unsigned* biostationID );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_SetBiostationID( int handle, unsigned id );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_GetTime( int handle, time_t* timeVal );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_SetTime( int handle, time_t timeVal );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_Reset( int handle );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_UpgradeEx( int handle, const char* upgradeFile );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_Disable( int handle, int timeout ); // max timeout = 60 sec
__declspec( dllexport ) BS_RET_CODE __stdcall BS_Enable( int handle );
//
// Log management
//
__declspec( dllexport ) BS_RET_CODE __stdcall BS_ClearLogCache( int handle );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_ReadLogCache( int handle, int* numOfLog, BSLogRecord* logRecord );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_ReadLog( int handle, time_t startTime, time_t endTime, int* numOfLog, BSLogRecord* logRecord ); // maximum numOfLog = 32768(BST), 8192(BE+) 
__declspec( dllexport ) BS_RET_CODE __stdcall BS_GetLogCount( int handle, int* numOfLog );
//
// User management
//
__declspec( dllexport ) BS_RET_CODE __stdcall BS_GetUserDBInfo( int handle, int* numOfUser, int* numOfTemplate );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_EnrollUser( int handle, BSUserHdr* hdr, unsigned char* templateData );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_DeleteUser( int handle, unsigned userID );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_DeleteAllUser( int handle );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_GetUser( int handle, unsigned userID, BSUserHdr* hdr, unsigned char* templateData );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_GetUserInfo( int handle, unsigned userID, BSUserHdr* hdr );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_GetAllUserInfo( int handle, BSUserHdr* hdr, int *numOfUser );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_ScanTemplate( int handle, unsigned char* templateData );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_ReadImage( int handle, int imageType, unsigned char* bitmapImage, int* imageLen );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_EnrollUserEx( int handle, BSUserHdrEx* hdr, unsigned char* templateData );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_GetUserEx( int handle, unsigned userID, BSUserHdrEx* hdr, unsigned char* templateData );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_GetUserInfoEx( int handle, unsigned userID, BSUserHdrEx* hdr );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_GetAllUserInfoEx( int handle, BSUserHdrEx* hdr, int *numOfUser );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_SetPrivateInfo(int handle, int type, const BSPrivateInfo* privateInfo, const char* imagePath );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_GetPrivateInfo( int handle, unsigned userID, BSPrivateInfo* privateinfo );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_GetAllPrivateInfo( int handle, BSPrivateInfo* privateinfo, int *numOfUser );
//
// Configuration
//
__declspec( dllexport ) BS_RET_CODE __stdcall BS_WriteDisplayConfig( int handle, BSDisplayConfig* config );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_ReadDisplayConfig( int handle, BSDisplayConfig* config );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_WriteIPConfig( int handle, BSIPConfig* config );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_ReadIPConfig( int handle, BSIPConfig* config );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_WriteFingerprintConfig( int handle, BSFingerprintConfig* config );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_ReadFingerprintConfig( int handle, BSFingerprintConfig* config );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_WriteEncryptionConfig( int handle, BSEncryptionConfig* config );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_ReadEncryptionConfig( int handle, BSEncryptionConfig* config );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_WriteWiegandConfig( int handle, BSWiegandConfig* config );
__declspec( dllexport ) BS_RET_CODE __stdcall BS_ReadWiegandConfig( int handle, BSWiegandConfig* config );
//
// Encryption
//
__declspec( dllexport ) void __stdcall BS_SetKey( unsigned char *key );
__declspec( dllexport ) int __stdcall BS_EncryptTemplate( unsigned char *input, unsigned char *output, int length );
__declspec( dllexport ) void __stdcall BS_DecryptTemplate( unsigned char *input, unsigned char *output, int length );
__declspec( dllexport ) int __stdcall BS_ConvertToUTF8( const char* msg, char* utf8Msg, int limitLen );
__declspec( dllexport ) time_t __stdcall BS_ConvertToLocalTime( time_t utcTime );